--- a/ALU/ALU_summary.html
+++ b/ALU/ALU_summary.html
@@ -2,16 +2,16 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Mux_4to1 Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ALU Project Status (12/22/2023 - 01:03:45)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>Mux_4to1.xise</TD>
+<TD>ALU.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
 <TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>Mux_4to1</TD>
+<TD>ALU</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>Synthesized</TD>
 </TR>
@@ -43,7 +43,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='D:/Verilog/MyVerilog/Mux_4to1\Mux_4to1_envsettings.html'>
+<A HREF_DISABLED='D:/Verilog/MyVerilog/ALU\ALU_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -58,19 +58,24 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>129</TD>
 <TD ALIGN=RIGHT>2400</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>5%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>129</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
-<TD ALIGN=RIGHT>42</TD>
+<TD ALIGN=RIGHT>30</TD>
 <TD ALIGN=RIGHT>102</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>41%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>29%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of DSP48A1s</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>12%</TD>
 </TR>
 </TABLE>
 
@@ -84,7 +89,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Verilog/MyVerilog/Mux_4to1\Mux_4to1.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Dec 21 19:07:24 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Verilog/MyVerilog/ALU\ALU.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Dec 22 01:03:43 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Verilog/MyVerilog/ALU\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -95,9 +100,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Verilog/MyVerilog/Mux_4to1\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Dec 21 19:08:18 2023</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Verilog/MyVerilog/ALU\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Dec 22 01:02:36 2023</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/21/2023 - 22:02:23</center>
+<br><center><b>Date Generated:</b> 12/22/2023 - 01:03:45</center>
 </BODY></HTML>
